--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<version>2.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.ibm.watson.developer_cloud</groupId>
+			<artifactId>conversation</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
