--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
 		<dependency>
 			<groupId>com.ibm.watson.developer_cloud</groupId>
 			<artifactId>conversation</artifactId>
