--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>conversation</artifactId>
 			<version>3.5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>se.michaelthelin.spotify</groupId>
+			<artifactId>spotify-web-api-java</artifactId>
+			<version>1.5.0</version>
+		</dependency>
 
 	</dependencies>
 
