--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<jvmArguments>-Xms300m -Xmx300m</jvmArguments>
 					<executable>true</executable>
 				</configuration>
 			</plugin>
