--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
 			<artifactId>spotify-web-api-java</artifactId>
 			<version>1.5.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
